# ai4se-harness

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .harness.example.yaml  AGENTS.md  AGENT_LOG.md  COLD_START_PROMPT.md  Dockerfile  PLAN.md  README.md  SPEC.md  SPEC_PROCESS.md  pyproject.toml
.github/workflows/: ci.yml
demos/: mechanism_demo.py
docs/superpowers/: 2026-07-17-cold-start-verification.md
docs/superpowers/plans/: 2026-07-16-coding-agent-harness.md
harness/core/: config.py  loop.py  memory.py
harness/feedback/: convergence.py  parsers.py  pipeline.py
harness/guardrails/: hitl.py  post_action.py  pre_action.py  rules.py
harness/llm/: client.py  schemas.py
harness/security/: credentials.py  setup.py
harness/tools/: base.py  dispatcher.py  edit_file.py  glob_tool.py  grep_tool.py  read_file.py  run_command.py
harness/web/: api.py  app.py
tests/: test_config.py  test_convergence.py  test_credentials.py  test_dispatcher.py  test_guardrails.py  test_hitl.py  test_loop.py  test_memory.py  test_parsers.py  test_pipeline.py  test_schemas.py  test_tools.py  test_web.py
